fix(ui): Stretch text input and remove double border

--- a/packages/ui/src/components/Forms/Inputs/SlugInput.sass
+++ b/packages/ui/src/components/Forms/Inputs/SlugInput.sass
@@ -36,10 +36,12 @@
 			color: var(--cui-control-color)
 
 	&-input
+		display: flex
 		flex: 1 1 auto
 		position: relative
 
-		.#{$cui-conf-globalPrefix}input
+		.#{$cui-conf-globalPrefix}text-input
+			border: none
 			@extend %implementsCustomFocusEffects
 
 	&-prefix + &-input
